# QtModelsToolkit

./: .gitignore  CMakeLists.txt  README.md  qtmodelstoolkit.qdocconf
.github/workflows/: build-and-test-linux.yml  build-and-test-windows.yml
demoapp/: CMakeLists.txt  ConcatModelPage.qml  GenericListView.qml  GroupingModelPage.qml  LeftJoinModelPage.qml  ModelEntryPage.qml  MovableModelPage.qml  MovableModelWithSfpmPage.qml  ObjectProxyModelExample1.qml  ObjectProxyModelExample2.qml  ObjectProxyModelPage.qml  RolesRenamingModelPage.qml  UsersModel.qml  WritableProxyModelPage.qml  main.cpp  main.qml  qml.qrc
docs/: index.html  qml-qtmodelstoolkit-aggregator-members.html  qml-qtmodelstoolkit-aggregator.html  qml-qtmodelstoolkit-concatmodel-members.html  qml-qtmodelstoolkit-concatmodel.html  qml-qtmodelstoolkit-functionaggregator-members.html  qml-qtmodelstoolkit-functionaggregator.html  qml-qtmodelstoolkit-groupingmodel-members.html  qml-qtmodelstoolkit-groupingmodel.html  qml-qtmodelstoolkit-leftjoinmodel-members.html  qml-qtmodelstoolkit-leftjoinmodel.html  qml-qtmodelstoolkit-modelcount-members.html  qml-qtmodelstoolkit-modelcount.html  qml-qtmodelstoolkit-modelentry-members.html  qml-qtmodelstoolkit-modelentry.html  qml-qtmodelstoolkit-modelquery-members.html  qml-qtmodelstoolkit-modelquery.html  qml-qtmodelstoolkit-movablemodel-members.html  qml-qtmodelstoolkit-movablemodel.html  qml-qtmodelstoolkit-objectproxymodel-members.html  qml-qtmodelstoolkit-objectproxymodel.html  qml-qtmodelstoolkit-rolerename-members.html  qml-qtmodelstoolkit-rolerename.html  qml-qtmodelstoolkit-rolesrenamingmodel-members.html  qml-qtmodelstoolkit-rolesrenamingmodel.html  qml-qtmodelstoolkit-singleroleaggregator-members.html  qml-qtmodelstoolkit-singleroleaggregator.html  qml-qtmodelstoolkit-sourcemodel-members.html  qml-qtmodelstoolkit-sourcemodel.html  qml-qtmodelstoolkit-sumaggregator-members.html  qml-qtmodelstoolkit-sumaggregator.html  qml-qtmodelstoolkit-writableproxymodel-members.html  qml-qtmodelstoolkit-writableproxymodel.html  qtmodelstoolkit-module.html  qtmodelstoolkit-qmlmodule.html  qtmodelstoolkit.index
testlib/: CMakeLists.txt
testlib/include/qtmodelstoolkit/testing/: listmodelwrapper.h  modelsignalsspy.h  modeltestutils.h  persistentindexestester.h  testmodel.h
testlib/src/: listmodelwrapper.cpp  modelsignalsspy.cpp  modeltestutils.cpp  persistentindexestester.cpp  testmodel.cpp
tests/: CMakeLists.txt  tst_Aggregator.cpp  tst_ConcatModel.cpp  tst_FunctionAggregator.cpp  tst_GroupingModel.cpp  tst_LeftJoinModel.cpp  tst_ModelCount.cpp  tst_ModelEntry.cpp  tst_ModelQuery.cpp  tst_ModelSyncedContainer.cpp  tst_MovableModel.cpp  tst_ObjectProxyModel.cpp  tst_RolesRenamingModel.cpp  tst_SingleRoleAggregator.cpp  tst_SnapshotObject.cpp  tst_SortFilterProxyModel.cpp  tst_SumAggregator.cpp  tst_WritableProxyModel.cpp
toolkit/: CMakeLists.txt
toolkit/include/qtmodelstoolkit/: aggregator.h  concatmodel.h  functionaggregator.h  groupingmodel.h  leftjoinmodel.h  modelcount.h  modelentry.h  modelquery.h  modelsyncedcontainer.h  movablemodel.h  objectproxymodel.h  registerqmltypes.h  rolesrenamingmodel.h  singleroleaggregator.h  snapshotmodel.h  snapshotobject.h  sumaggregator.h  writableproxymodel.h
toolkit/src/: aggregator.cpp  concatmodel.cpp  functionaggregator.cpp  groupingmodel.cpp  index.qdoc  leftjoinmodel.cpp  modelcount.cpp  modelentry.cpp  modelquery.cpp  movablemodel.cpp  objectproxymodel.cpp  qtmodelstoolkitplugin.cpp  registerqmltypes.cpp  rolesrenamingmodel.cpp  singleroleaggregator.cpp  snapshotmodel.cpp  snapshotobject.cpp  sumaggregator.cpp  writableproxymodel.cpp
